  The library is fairly stable and regressions tends to be fixed fast when reported.

HOW TO UPDATE?

- pip or pip3 install dearpygui --upgrade
- Read the `Breaking Changes` section (here in the changelog).
- Please report any issue!

-----------------------------------------------------------------------
 VERSION 0.4.1 WIP
-----------------------------------------------------------------------

-----------------------------------------------------------------------
 VERSION 0.4.0 (9/28/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.0

Updates:
- ImPlot: upgraded to commit 90cbb56

Fixes:
- Other:      Too many fixes to count.
- Threadpool: Fixed issue with some tasks going uncompleted
- Popups:     Can now be added anywhere (don't have to be right after their parent)
- Tooltips:   Can now be added anywhere (don't have to be right after their parent)
- Widgets:    Can widths can now be negative (size from the right side of screen)

Breaking Changes:
- Handlers:       removed "handler" from all callbacks except resize
- Data Source:    data_source keywords changed to "source"
- Tables:         tables no longer use set/get value
- Modules:        dearpygui module is now called core
- Modules:        wrapper module is now called simple
- Line Series:    Removed "fill" keyword (use the new shade series)
- Plots:          Removed all flags in favor of keywords
- Plots:          x/y_axis_name keyword now required
- Window:         For the "add_window" command, we changed start_x,start_y
                  to x_pos, y_pos
- Window:         For the "add_window" command, changed resizable keyword to no_resize
- Window:         For the "add_window" command, changed title_bar keyword to no_title_bar
- Window:         For the "add_window" command, changed movable keyword to no_move
- Images:         Removed secondary data source from images